src/main/resources/edu/wpi/N/css/newMapDisplay.css
.pane:hover {
    -fx-border-color: #4A69C6;
    -fx-border-width: 2px;
}

.textField {
    -fx-text-fill: BLACK;
    -fx-background-color: #E6EBF2;
    -fx-pref-height: 35px;
    -fx-background-radius: 25px;
    -fx-prompt-text-fill: GREY;
    -fx-font-size: 15;
}

.list-cell {
    -fx-background-radius: 25px;
    -fx-background-color: #E6EBF2;
    -fx-font-size: 12;
    -fx-padding: 8px;
}

.list-cell:selected {
    -fx-background-color: #7E9AB6;
}

.button {
    -fx-background-color: #4A69C6;
    -fx-background-radius: 25px;
    -fx-text-fill: #E6EBF2;
    -fx-pref-width: 125px;
    -fx-pref-height: 25px;
    -fx-font-size: 18;
}

.toggle {
    -fx-text-fill: #e6ebf2;
    -fx-background-color: #263051;
    -fx-font-size: 18;
}

.label {
    -fx-text-fill: #E6EBF2;
    -fx-font-size: 15;
}

